--- a/asterisk.conf
+++ b/asterisk.conf
@@ -1,15 +1,15 @@
 
 [directories](!)
-astetcdir =>	/root/sys/vpn/etc/asterisk
-astmoddir =>	/root/sys/vpn/lib/asterisk/modules
-astvarlibdir =>	/root/sys/vpn/var/lib/asterisk
-astdbdir =>	/root/sys/vpn/var/lib/asterisk
-astkeydir =>	/root/sys/vpn/var/lib/asterisk
-astdatadir =>	/root/sys/vpn/var/lib/asterisk
-astagidir =>	/root/sys/vpn/var/lib/asterisk/agi-bin
-astspooldir =>	/root/sys/vpn/var/spool/asterisk
-astrundir =>	/root/sys/vpn/var/run/asterisk
-astlogdir =>	/root/sys/vpn/var/log/asterisk
+astetcdir =>	/vpn/etc/asterisk
+astmoddir =>	/vpn/lib/asterisk/modules
+astvarlibdir =>	/vpn/var/lib/asterisk
+astdbdir =>	/vpn/var/lib/asterisk
+astkeydir =>	/vpn/var/lib/asterisk
+astdatadir =>	/vpn/var/lib/asterisk
+astagidir =>	/vpn/var/lib/asterisk/agi-bin
+astspooldir =>	/vpn/var/spool/asterisk
+astrundir =>	/vpn/var/run/asterisk
+astlogdir =>	/vpn/var/log/asterisk
 
 [options]
 maxcalls=0
